| Bug #49400 | duplicate [TCP] section makes ndb_mgmd abort silently | ||
|---|---|---|---|
| Submitted: | 3 Dec 2009 14:09 | Modified: | 7 Jun 2010 16:14 |
| Reporter: | Hartmut Holzgraefe | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Cluster: Cluster (NDB) storage engine | Severity: | S3 (Non-critical) |
| Version: | mysql-5.1-telco-7.0 | OS: | Linux |
| Assigned to: | John David Duncan | CPU Architecture: | Any |
| Tags: | mysql-cluster-7.09b | ||
[3 Dec 2009 14:09]
Hartmut Holzgraefe
[3 Dec 2009 14:36]
Hartmut Holzgraefe
Having two [TCP] entries with the same node id pair but with NodeId1/2 swapped is accepted though, even when the Hostname1/2 settings are completely different. The following config.ini is accepted by the starting management node: [ndb_mgmd] Id=1 Hostname=ndbsup-1 DataDir=/data2/csc/42253/cluster [ndbd default] NoOfReplicas=2 DataDir=/data2/csc/42253/cluster [ndbd] Id=2 Hostname=ndbsup-2 [ndbd] Id=3 Hostname=ndbsup-3 [mysqld] [tcp] NodeId1=2 NodeId2=3 Hostname1=ndbsup-priv-1 Hostname2=ndbsup-priv-2 # again, but with swapped Ids and different HostNames: [tcp] NodeId1=3 NodeId2=2 Hostname1=ndbsup-priv-3 Hostname2=ndbsup-priv-4
[14 Dec 2009 21:05]
Magnus BlÄudd
1. The config.ini parser should detect the duplicate TCP section and throw an error. "At line X, you have already defined a TCP section for this node pair" 2. The diff algorithm should probably be fixed to cope with the error and not crash mgmd.
[12 May 2010 19:13]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/108195 3533 John David Duncan 2010-05-12 bug#49400: when parsing a config file, reject any TCP,SHM, or SCI connection that is a duplicate of a previously defined connection.
[2 Jun 2010 16:51]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/110017 3534 John David Duncan 2010-06-02 bug#49400: minor fixes. This is a patch on top of the previous one.
[3 Jun 2010 15:14]
Bugs System
Pushed into 5.1.44-ndb-7.0.16 (revid:jdd@mysql.com-20100603151238-2lxa7snekhvlo4sx) (version source revid:jdd@mysql.com-20100603151238-2lxa7snekhvlo4sx) (merge vers: 5.1.44-ndb-7.0.16) (pib:16)
[7 Jun 2010 15:40]
Jon Stephens
Also pushed to 5.1.44-ndb-7.1.5 (verified by inspecting source).
[7 Jun 2010 16:14]
Jon Stephens
Documented bugfix in the NDB-7.0.15 and 7.1.6 changelogs as follows:
The presence of duplicate [tcp] sections in the config.ini file
caused the management server to crash. Now in such cases,
ndb_mgmd fails gracefully with an appropriate error message.
Closed.
[8 Jun 2010 12:47]
Jon Stephens
Typo in previous comment, should have said 7.0.16, not 7.0.15.
