bug#49400: minor fixes.  This is a patch on top of the previous one.